@@ -1157,8 +1157,7 @@ SelectPinnedElementsAction_label = Diagram elements pinning
 SelectPinnedElementsAction_tooltip = Pin/Unpin
 SelectionWizardCommand_cancelExceptionMsg = User cancel operation
 SetBestHeightHeaderCommand_label = Refresh graphical layout
-SetChangeIdMigrationParticipant_title = Migration done for "Change ID null" (the result of this migration will be saved on the next session save):
-SetChangeIdMigrationParticipant_changeIDModified = \n\t* The changeId has been set in diagram "{0}".
+SetChangeIdMigrationParticipant_title = Migration done for "representation Change ID": all the representations changeId have been updated with the absolute time stamp (this migration will be saved on the next session save):
 SetConnectionBendpointsAccordingToExtremityMoveCommmand_sourceSidedLabel = Move first segment (on source side)
 SetConnectionBendpointsAccordingToExtremityMoveCommmand_targetSidedLabel = Move last segment (on target side)
 SetCurrentConcernCommand_label = Set current concern
