@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 THALES GLOBAL SERVICES.
+ * Copyright (c) 2021, 2022 THALES GLOBAL SERVICES.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -12,11 +12,10 @@
  *******************************************************************************/
 package org.eclipse.sirius.diagram.ui.business.internal.migration;
 
-import java.text.MessageFormat;
 import java.util.List;
-import java.util.UUID;
 
 import org.eclipse.emf.common.util.EList;
+import org.eclipse.sirius.business.api.helper.RepresentationHelper;
 import org.eclipse.sirius.business.api.migration.AbstractRepresentationsFileMigrationParticipant;
 import org.eclipse.sirius.diagram.tools.api.DiagramPlugin;
 import org.eclipse.sirius.diagram.ui.provider.Messages;
@@ -26,10 +25,12 @@ import org.eclipse.sirius.viewpoint.DView;
 import org.osgi.framework.Version;
 
 /**
- * This migration participant set a changeId for each {@link DRepresentationDescriptor} that does not have a changeId
- * set.
+ * This migration participant updates DRpresentationDescriptor.changeId.<br/>
+ * Its purpose is to replace the old value that was an uid by the new one that is a time stamp representing the absolute
+ * time.
  * 
  * @author Glenn Plouhinec
+ * @author lfasani
  *
  */
 public class SetChangeIdMigrationParticipant extends AbstractRepresentationsFileMigrationParticipant {
@@ -47,21 +48,17 @@ public class SetChangeIdMigrationParticipant extends AbstractRepresentationsFile
     @Override
     protected void postLoad(DAnalysis dAnalysis, Version loadedVersion) {
         if (loadedVersion.compareTo(MIGRATION_VERSION) < 0) {
-            StringBuilder sb = new StringBuilder(Messages.SetChangeIdMigrationParticipant_title);
             EList<DView> ownedViews = dAnalysis.getOwnedViews();
             boolean migrationOccured = false;
             for (DView view : ownedViews) {
                 List<DRepresentationDescriptor> ownedRepresentationsDescriptors = view.getOwnedRepresentationDescriptors();
                 for (DRepresentationDescriptor descriptor : ownedRepresentationsDescriptors) {
-                    if (descriptor.getChangeId() == null) {
-                        migrationOccured = true;
-                        sb.append(MessageFormat.format(Messages.SetChangeIdMigrationParticipant_changeIDModified, descriptor.getName()));
-                        descriptor.setChangeId(UUID.randomUUID().toString());
-                    }
+                    migrationOccured = true;
+                    RepresentationHelper.updateChangeId(descriptor);
                 }
             }
             if (migrationOccured) {
-                DiagramPlugin.getDefault().logInfo(sb.toString());
+                DiagramPlugin.getDefault().logInfo(Messages.SetChangeIdMigrationParticipant_title);
                 migrationOccured = false;
             }
         }
